--- a/gb/20/8/19/n12342081.md
+++ b/gb/20/8/19/n12342081.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/khwnkc357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/khwnkc357/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/khwnkc357/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/khwnkc357/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/khwnkc357/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>难以承受疫情打击 维州多所私校申领JobKeeper补贴</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/Depositphotos_82693046_m-2015-600x396-600x396.jpg" />
 <h6>示意图。（Depositphotos）
 </h6>
 <hr>
-<p>【大纪元2020年08月19日讯】（大纪元记者宋清宁澳洲墨尔本编译报导）由于<ahref="https://github.com/khwnkc357/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（武汉肺炎）疫情造成经济形势日益恶化，<ahref="https://github.com/khwnkc357/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>一些最富裕的私立学校正在依靠联邦的保工薪水<ahref="https://github.com/khwnkc357/djy/blob/master/gb/tag/%E8%A1%A5%E8%B4%B4.md#1">补贴</a>（JobKeeper）保住员工的工作。</p>
-<p>据《时代报》报导，虽然澳洲的大学没有申请资格，但数个大学的国际学生学院（包括墨尔本大学的Trinity College和莫纳什大学的Monash College）获得了该<ahref="https://github.com/khwnkc357/djy/blob/master/gb/tag/%E8%A1%A5%E8%B4%B4.md#1">补贴</a>。</p>
-<p>随着<ahref="https://github.com/khwnkc357/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>的学校重新转入远程教学，包括Trinity Grammar、Geelong Grammar、Wesley College和Gippsland Grammar在内的多家私立学校确认，在失去了30%或更多的收入后，如今他们也能够申领保工薪水补贴。</p>
+<p>【大纪元2020年08月19日讯】（大纪元记者宋清宁澳洲墨尔本编译报导）由于<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（武汉肺炎）疫情造成经济形势日益恶化，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>一些最富裕的私立学校正在依靠联邦的保工薪水<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%A1%A5%E8%B4%B4.md#1">补贴</a>（JobKeeper）保住员工的工作。</p>
+<p>据《时代报》报导，虽然澳洲的大学没有申请资格，但数个大学的国际学生学院（包括墨尔本大学的Trinity College和莫纳什大学的Monash College）获得了该<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%A1%A5%E8%B4%B4.md#1">补贴</a>。</p>
+<p>随着<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>的学校重新转入远程教学，包括Trinity Grammar、Geelong Grammar、Wesley College和Gippsland Grammar在内的多家私立学校确认，在失去了30%或更多的收入后，如今他们也能够申领保工薪水补贴。</p>
 <p>消息人士称，已有十多所学校申请成功，包括收取高额学费的Strathcona Girls&#8217; Grammar、 Fintona Girls&#8217; School、Korowa Anglican Girls&#8217; School和Methodist Ladies&#8217; College。</p>
 <p>根据保工薪水补贴的资格要求，如果非营利性实体，如私立学校遭受30%或以上的收入损失，就有申领资格。</p>
-<p>疫情中，一些<ahref="https://github.com/khwnkc357/djy/blob/master/gb/tag/%E7%A7%81%E6%A0%A1.md#1">私校</a>为遇到经济困难的家庭减收或延期了学费，另一些因为寄宿学生无法留在校园而遭受收入损失。</p>
+<p>疫情中，一些<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A7%81%E6%A0%A1.md#1">私校</a>为遇到经济困难的家庭减收或延期了学费，另一些因为寄宿学生无法留在校园而遭受收入损失。</p>
 <p>一些未在第二学期申领保工薪水补贴的学校预计将在第三学期申请。</p>
 <p>向高年级每年收取34,610元学费的Wesley College在第二学期将学费削减了25%，并在最近承诺不会在2021年增加收费，但表示不会继续提供学费折扣。</p>
 <p>校长埃文斯（Nick Evans）说，在400多个学生家庭遭遇经济困难，并且其位于维州和西澳的寄宿校区暂时关闭后，保工薪水补贴保住了该校的数百份工作岗位。</p>
@@ -28,48 +28,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/6/n12312586.md#1">政府为保工补贴增资150亿元 援助更多企业</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/8/n12316057.md#1">新调查：多数专家不建议在2020年购房</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/12/n12324143.md#1">疫情听证会“拷问”州长 隔离酒店丑闻不断</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/12/n12324566.md#1">维州150万人将靠JobKeeper度日 感恩联邦支持</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/13/n12327692.md#1">维州将检测隔离补贴提高至450元</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/17/n12336843.md#1">第二轮封锁致维州经济雪上加霜 小商企挣扎求生</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/19/n12342073.md#1">维州最依赖JobKeeper补贴的郊区揭晓</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/3/7/n11922895.md#1">中共病毒：维州增240例 13死 疫情继续减缓</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/19/n12341864.md#1">维州囚犯获通话补贴 耗纳税人150万</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/19/n12341853.md#1">四级封锁令下被迫停工 墨尔本个体户不满</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/6/n12312586.md#1">政府为保工补贴增资150亿元 援助更多企业</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/8/n12316057.md#1">新调查：多数专家不建议在2020年购房</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/12/n12324143.md#1">疫情听证会“拷问”州长 隔离酒店丑闻不断</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/12/n12324566.md#1">维州150万人将靠JobKeeper度日 感恩联邦支持</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/13/n12327692.md#1">维州将检测隔离补贴提高至450元</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/17/n12336843.md#1">第二轮封锁致维州经济雪上加霜 小商企挣扎求生</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753149.md#1">澳洲学校终止合作 北领地孔子课堂关闭</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753142.md#1">澳总理出访印尼加深商贸合作 讨论安全问题</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752906.md#1">对抗王毅太平洋岛国行 美加强与该地区关系</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752766.md#1">纪念六四33周年 墨尔本举办系列活动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217581.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（下）</a></li><li><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/3/n11297122.md#1" target="_blank">外媒：中国陆军医院前实习生亲历活摘器官</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10992360.md#1" target="_blank">传奇总统里根（7）: 唤醒苏联领导人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/6/n12311908.md#1">僧人神游极乐世界 带回醒世奇闻</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/6/7/n12168858.md#1">“势败休云贵  家亡莫论亲”  板儿递给巧姐的那个佛手</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/16/n12335448.md#1">神秘的中国绝代王后（上）</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/14/n12329430.md#1">疗愈人心的天堂歌声——创作歌手凯蒂?曼蒂克</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/15/n12332674.md#1">美国防部成立特别工作组 专门调查UFO</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/20/n12344199.md#1">【西岸观察】民主党大会为何避谈中国问题</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/20/n12344860.md#1">【纪元播报】川普：用华为设备是“一场灾难”</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/19/n12343630.md#1">【薇羽看世间】前FBI律师被控 通俄门真相显</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/17/n12338272.md#1">【新闻看点】北戴河会超长结束 习难脱7大困境</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/18/n12339413.md#1">上海公安局长龚道安被查 将掀政法风暴</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/18/n12339091.md#1">受美制裁 林郑首度承认使用信用卡受限制</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/18/n12340885.md#1">成龙曾自曝做假慈善 不惭言论惊呆网友</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/17/n12338375.md#1">孙俪爆料邓超糗事 做了一天笔记最终空无一字</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/17/n12338032.md#1">港星住不惯大陆隔离酒店 一句话惹小粉红围剿</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/19/n12342056.md#1">小娴认了与金刚交往 同在垦丁冲浪结缘</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/19/n12341221.md#1">自导自演囧系列电影 徐峥深夜困机场笑翻网友</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/17/n12338146.md#1">走路也能护膝盖 医师：对膝盖有益的健走方法</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/18/n12339362.md#1">大陆老翁遛狗 被从天而降的小猫砸昏</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/17/n12338232.md#1">子宫肌瘤切掉还会长？4种体质教你从根本改善</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/18/n12339666.md#1">美国男子发明一把枪 可发射口罩到人的脸上</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/19/n12342359.md#1">小行星以史上最近距离飞越地球 NASA没发现</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/khwnkc357/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/khwnkc357/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/19/n12342081.htm">难以承受疫情打击 维州多所私校申领JobKeeper补贴</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/19/n12342081.htm">难以承受疫情打击 维州多所私校申领JobKeeper补贴</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/khwnkc357/djy/blob/master/gb/20/8/19/n12342081.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/khwnkc357/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/khwnkc357/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/khwnkc357/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/8/19/n12342081.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
